--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ main {
 
 section {
     display: flex;
-    width: 1080px;
-    height: 1080px;
+    width: 95vw;
+    height: 95vh;
     overflow: scroll;
     scroll-snap-type: x mandatory;
     }
@@ -49,31 +49,33 @@ article {
     display: flex;
     position: relative;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: 95vw;
+    height: 95vh;
     scroll-snap-align: center;
     }
     .front {
         display: flex;
-        width: 1080px;
+        width: 95vw;
+        height: 95vh;
         z-index: 100;
     }
     #video1 {
         position: absolute;
-        height: 1190px;
+        height: 110%;
         margin-left: -450px;
     }
     #video3 {
         position: absolute;
-        height: 1080px;
+        height: 100%;
         margin-left: -350px;
         z-index: -20;
         }  
     .video {
         position: absolute;
         background-image: url('./assets/images/art2-bg-image.png');
-        width: 1080px;
-        height: 1080px;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
         z-index: 90;
         }
         .video .cloudanimation {
